@@ -1,3 +1,9 @@
+2006-05-25  Noah Misch  <noah@cs.caltech.edu>
+
+	* lib/Automake/XFile.pm (lock): Allow EOPNOTSUPP, besides
+	ENOLCK.  Only mention `make -j' when applicable.  Only raise
+	fatal errors when `make -j' is involved.  Improve error message.
+
 2006-05-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* lib/Autom4te/Configure_ac.pm (find_configure_ac): Use
